---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/measure.qasm
expect-lex: Ok
--- source ---

measure $0, $1;
a[0:1] = measure $0, $1;
a = measure $0 -> b;
creg a[1] = measure $0;
measure $0 -> creg a[1];
measure $0 -> bit[1] a;
// Measure can't be used in sub-expressions.
a = 2 * measure $0;
a = (measure $0) + (measure $1);
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "measure" @1..8
[2] Whitespace " " @8..9
[3] HardwareIdent "$0" @9..11
[4] Comma "," @11..12
[5] Whitespace " " @12..13
[6] HardwareIdent "$1" @13..15
[7] Semi ";" @15..16
[8] Whitespace "\n" @16..17
[9] Ident "a" @17..18
[10] OpenBracket "[" @18..19
[11] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @19..20
[12] Colon ":" @20..21
[13] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @21..22
[14] CloseBracket "]" @22..23
[15] Whitespace " " @23..24
[16] Eq "=" @24..25
[17] Whitespace " " @25..26
[18] Ident "measure" @26..33
[19] Whitespace " " @33..34
[20] HardwareIdent "$0" @34..36
[21] Comma "," @36..37
[22] Whitespace " " @37..38
[23] HardwareIdent "$1" @38..40
[24] Semi ";" @40..41
[25] Whitespace "\n" @41..42
[26] Ident "a" @42..43
[27] Whitespace " " @43..44
[28] Eq "=" @44..45
[29] Whitespace " " @45..46
[30] Ident "measure" @46..53
[31] Whitespace " " @53..54
[32] HardwareIdent "$0" @54..56
[33] Whitespace " " @56..57
[34] Minus "-" @57..58
[35] Gt ">" @58..59
[36] Whitespace " " @59..60
[37] Ident "b" @60..61
[38] Semi ";" @61..62
[39] Whitespace "\n" @62..63
[40] Ident "creg" @63..67
[41] Whitespace " " @67..68
[42] Ident "a" @68..69
[43] OpenBracket "[" @69..70
[44] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @70..71
[45] CloseBracket "]" @71..72
[46] Whitespace " " @72..73
[47] Eq "=" @73..74
[48] Whitespace " " @74..75
[49] Ident "measure" @75..82
[50] Whitespace " " @82..83
[51] HardwareIdent "$0" @83..85
[52] Semi ";" @85..86
[53] Whitespace "\n" @86..87
[54] Ident "measure" @87..94
[55] Whitespace " " @94..95
[56] HardwareIdent "$0" @95..97
[57] Whitespace " " @97..98
[58] Minus "-" @98..99
[59] Gt ">" @99..100
[60] Whitespace " " @100..101
[61] Ident "creg" @101..105
[62] Whitespace " " @105..106
[63] Ident "a" @106..107
[64] OpenBracket "[" @107..108
[65] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @108..109
[66] CloseBracket "]" @109..110
[67] Semi ";" @110..111
[68] Whitespace "\n" @111..112
[69] Ident "measure" @112..119
[70] Whitespace " " @119..120
[71] HardwareIdent "$0" @120..122
[72] Whitespace " " @122..123
[73] Minus "-" @123..124
[74] Gt ">" @124..125
[75] Whitespace " " @125..126
[76] Ident "bit" @126..129
[77] OpenBracket "[" @129..130
[78] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @130..131
[79] CloseBracket "]" @131..132
[80] Whitespace " " @132..133
[81] Ident "a" @133..134
[82] Semi ";" @134..135
[83] Whitespace "\n" @135..136
[84] LineComment "// Measure can't be used in sub-expressions." @136..180
[85] Whitespace "\n" @180..181
[86] Ident "a" @181..182
[87] Whitespace " " @182..183
[88] Eq "=" @183..184
[89] Whitespace " " @184..185
[90] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @185..186
[91] Whitespace " " @186..187
[92] Star "*" @187..188
[93] Whitespace " " @188..189
[94] Ident "measure" @189..196
[95] Whitespace " " @196..197
[96] HardwareIdent "$0" @197..199
[97] Semi ";" @199..200
[98] Whitespace "\n" @200..201
[99] Ident "a" @201..202
[100] Whitespace " " @202..203
[101] Eq "=" @203..204
[102] Whitespace " " @204..205
[103] OpenParen "(" @205..206
[104] Ident "measure" @206..213
[105] Whitespace " " @213..214
[106] HardwareIdent "$0" @214..216
[107] CloseParen ")" @216..217
[108] Whitespace " " @217..218
[109] Plus "+" @218..219
[110] Whitespace " " @219..220
[111] OpenParen "(" @220..221
[112] Ident "measure" @221..228
[113] Whitespace " " @228..229
[114] HardwareIdent "$1" @229..231
[115] CloseParen ")" @231..232
[116] Semi ";" @232..233
[117] Whitespace "\n" @233..234
